# ebook_summarizer_and_mindmap

./: agents.md
.github/: copilot-instructions.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
backend/: .env.example  .flake8  .gitignore  pyproject.toml  requirements.txt
backend/alembic/: README.md  env.py
backend/alembic/versions/: 001_initial_schema.py
backend/src/: config.py  main.py
backend/src/api/: __init__.py
backend/src/api/routes/: __init__.py  health.py
backend/src/middleware/: __init__.py  cors_middleware.py  error_middleware.py
backend/src/models/: __init__.py  api_log.py  document.py  mindmap.py  summary.py  user.py
backend/src/utils/: README.md  __init__.py  error_handler.py  error_handler_examples.py  logger.py  validators.py
backend/tests/: __init__.py  conftest.py
backend/tests/unit/: test_config.py  test_error_handler.py  test_health.py  test_logger.py  test_main.py  test_models_base.py  test_validators.py
frontend/: .env.example  .eslintrc.json  .prettierrc  package-lock.json  pnpm-lock.yaml
frontend/lib/services/: README.md  api.ts  apiExamples.ts  errorTransform.ts  index.ts  store.examples.tsx  store.ts
frontend/lib/types/: README.md  api.ts  index.ts
frontend/lib/utils/: README.md  errorFormatter.examples.ts  errorFormatter.ts
specs/001-pdf-summary-mindmap/: T009_implementation.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-pdf-summary-mindmap/checklists/: requirements.md
specs/001-pdf-summary-mindmap/contracts/: backend-api.yaml  gemini-api.md
